--- a/public/index.css
+++ b/public/index.css
@@ -9,16 +9,27 @@
 /* VARIABLES */
 
 :root {
-  --bg-clr-main: #000;
+  --clr-neutral-100: #000;
+  --clr-neutral-900: #fff;
 
-  --txt-clr-main: #fff;
+  --clr-1: #1A5B7A;
+  --clr-2: #007F95;
+  --clr-3: #00A39D;
+  --clr-4: #43C593;
+  --clr-5: #9CE27F;
+  --clr-6: #F9F871;
+  --clr-7: #D77FA9;
+  --clr-8: #B478AD;
+  --clr-9: #8D73AB;
+  --clr-10: #EB9929;
+  --clr-11: #ECFCFF;
 }
 
 /* PRESETS */
 
 body {
-  background-color: var(--bg-clr-main);
-  color: var(--txt-clr-main);
+  background-color: var(--clr-11);
+  color: var(--clr-neutral-100);
 }
 
 /* UTILITY CLASSES */
@@ -27,18 +38,80 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  gap: var(--gap, 0em);
 }
 
 .flex--row {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+  gap: var(--gap, 0em);
 }
 
 /* MAIN */
 
 .main {
   padding: 2em;
+}
+
+.tasks-container {
+  --gap: 2em;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.task {
+  --offset-from-shadow: 1em;
+  --width: 30em;
+  --height: 30em;
+  position: relative;
+  width: var(--width);
+  height: var(--height);
+}
+
+.task__body {
+  padding: 1.5em;
+  width: var(--width);
+  height: var(--height);
+  background-color: var(--clr-1);
+  color: var(--clr-neutral-900);
+  transition-duration: 100ms;
+}
+
+.task__body:hover {
+  box-shadow: 0 0 var(--clr-neutral-100);
+  transform: 
+    translateX(var(--offset-from-shadow)) 
+    translateY(var(--offset-from-shadow));
+}
+
+.task__shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: var(--clr-neutral-100);
+  width: 100%;
+  height: 100%;
+  transform: 
+    translateX(var(--offset-from-shadow)) 
+    translateY(var(--offset-from-shadow));
+  z-index: -1;
+}
+
+.task__location {
+
+}
+
+.task__description {
+  
+}
+
+.task__matter {
+
+}
+
+.task__client {
+  
 }
 
 /* RESPONSIVE */
