--- a/public/index.css
+++ b/public/index.css
@@ -14,9 +14,10 @@
 
   --clr-task-body: #1A5B7A;
   --clr-task-checkbox: #ABE2FF;
-  --clr-task-checkbox-border: #659CBE;
+  --clr-task-checkbox-border: #7BB2D5;
   --clr-task-txt: #F1F1E6;
   --clr-task-client: #F9F871;
+  --clr-task-matter: #7BB2D5;
   --clr-task-location: #7BB2D5;
 
   --clr-bg: #ECFCFF;
@@ -72,7 +73,8 @@ body {
 .task {
   --offset-from-shadow: 1em;
   --width: 30em;
-  --height: 12em;
+  --height: 11em;
+  --border-radius: .5em;
   position: relative;
   width: var(--width);
   height: var(--height);
@@ -85,6 +87,7 @@ body {
   width: var(--width);
   height: var(--height);
   background-color: var(--clr-task-body);
+  border-radius: var(--border-radius);
   color: var(--clr-task-txt);
   transition-duration: 100ms;
 }
@@ -104,6 +107,7 @@ body {
   background-color: var(--clr-neutral-100);
   width: 100%;
   height: 100%;
+  border-radius: var(--border-radius);
   transform: 
     translateX(var(--offset-from-shadow)) 
     translateY(var(--offset-from-shadow));
@@ -116,6 +120,12 @@ body {
   color: var(--clr-task-client);
   font-weight: normal;
   font-family: var(--ff-task-client);
+  text-transform: uppercase;
+}
+
+.task__matter {
+  font-size: 0.75em;
+  color: var(--clr-task-matter);
   text-transform: uppercase;
 }
 
@@ -154,12 +164,8 @@ body {
   left: var(--padding);
   font-size: .75em;
   font-family: var(--ff-task-location);
-  text-transform: uppercase;
+  text-transform: lowercase;
   color: var(--clr-task-location);
-}
-
-.task__matter {
-
 }
 
 /* RESPONSIVE */
