Set up section in dom where controls will be
Make minor improvements to color and layout

--- a/public/index.css
+++ b/public/index.css
@@ -20,7 +20,7 @@
   --clr-task-matter: #7BB2D5;
   --clr-task-location: #7BB2D5;
 
-  --clr-bg: #ECFCFF;
+  --clr-bg: #F9F871;
 
   --ff-task-heading: monospace;
   --ff-task-description: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -34,6 +34,8 @@
 body {
   background-color: var(--clr-bg);
   color: var(--clr-neutral-100);
+  width: 100vw;
+  min-height: 100vh;
 }
 
 /* UTILITY CLASSES */
@@ -55,48 +57,65 @@ body {
 /* MAIN */
 
 .main {
-  padding: 2em;
+  width: 100vw;
+  height: 100vh;
 }
+
+/* task container */
 
 .tasks-container {
   --gap: 2em;
-  flex-wrap: wrap;
-  justify-content: space-around;
+  --task-width: 30em;
+  --task-height: 10em;
+  align-items: center;
+  width: 40%;
+  height: 100%;
+  padding: 2em;
+  overflow-y: scroll;
+  z-index: 3;
 }
 
-.tasks-container > h2 {
+.tasks-container ._heading {
   font-size: 2.5em;
   font-family: var(--ff-task-heading);
   text-transform: uppercase;
 }
 
+.tasks-container ._heading__details {
+  font-size: 0.5em;
+  color: #444;
+}
+
+/* task */
+
 .task {
-  --offset-from-shadow: 1em;
-  --width: 30em;
-  --height: 11em;
+  --shadow-offset: 1em;
   --border-radius: .5em;
   position: relative;
-  width: var(--width);
-  height: var(--height);
+  width: min(100%, 30em);
+  height: var(--task-height);
+  padding-right: var(--shadow-offset);
+  padding-bottom: var(--shadow-offset);
 }
 
 .task__body {
   --padding: 1.5em;
   position: relative;
   padding: var(--padding);
-  width: var(--width);
-  height: var(--height);
+  width: 100%;
+  height: var(--task-height);
   background-color: var(--clr-task-body);
   border-radius: var(--border-radius);
   color: var(--clr-task-txt);
   transition-duration: 100ms;
+  z-index: 10;
 }
 
 .task__body:hover {
   box-shadow: 0 0 var(--clr-neutral-100);
   transform: 
-    translateX(var(--offset-from-shadow)) 
-    translateY(var(--offset-from-shadow));
+    translateX(var(--shadow-offset)) 
+    translateY(var(--shadow-offset));
   cursor: pointer;
 }
 
@@ -105,21 +124,21 @@ body {
   top: 0;
   left: 0;
   background-color: var(--clr-neutral-100);
-  width: 100%;
+  width: calc(100% - var(--shadow-offset));
   height: 100%;
   border-radius: var(--border-radius);
   transform: 
-    translateX(var(--offset-from-shadow)) 
-    translateY(var(--offset-from-shadow));
-  z-index: -1;
+    translateX(var(--shadow-offset)) 
+    translateY(var(--shadow-offset));
+  z-index: 5;
 }
 
 .task__client {
   font-size: 1.2em;
-  margin-bottom: 1em;
+  margin-bottom: .8em;
   color: var(--clr-task-client);
-  font-weight: normal;
   font-family: var(--ff-task-client);
+  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -141,10 +160,9 @@ body {
   position: absolute;
   right: var(--padding);
   top: var(--padding);
-  border: var(--border-width) dashed var(--clr-task-checkbox-border);
-  box-shadow: 0 0 0 var(--border-width) var(--clr-task-body);
   width: var(--width);
   height: var(--width);
+  border: var(--border-width) dashed var(--clr-task-checkbox-border);
 }
 
 .task__checkbox::before {
@@ -166,6 +184,20 @@ body {
   font-family: var(--ff-task-location);
   text-transform: lowercase;
   color: var(--clr-task-location);
+}
+
+.task__location__text {
+  margin-left: .25em;
+}
+
+/* controls */
+
+.controls {
+  background-color: var(--clr-neutral-900);
+  color: #1B3D2F;
+  height: 100%;
+  align-self: center;
+  flex: 1;
 }
 
 /* RESPONSIVE */
