--- a/public/styles/main/controls.css
+++ b/public/styles/main/controls.css
@@ -97,19 +97,42 @@
 
 /* MENUS */
 
-/* tasks menu */
-
 .menus {
   width: 100%;
   height: 100%;
 }
 
-.tasks-menu {
+/* menu */
+
+.menu {
   --gap: 2em;
   width: 100%;
   height: 100%;
   padding: 2em;
 }
+
+.menu[data-active="false"] {
+  display: none;
+}
+
+.menu[data-active="true"] {
+  display: flex;
+}
+
+.menu__work-in-progress {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
+  width: 100%;
+}
+
+.menu__work-in-progress > h2 {
+  font-weight: bold;
+  margin-bottom: 1em;
+}
+
+/* tasks menu */
+
+/* tasks menu buttons */
 
 .tasks-menu__btn {
   width: 90%;
@@ -124,8 +147,4 @@
 
 .tasks-menu__btn:hover {
   opacity: .75;
-}
-
-.tasks-menu__btn:active {
-  opacity: .5;
 }
